public interface IPushable
{
    void OnPush(UnityEngine.Vector3 force, Fusion.PlayerRef pusher);
}
